--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
   web:
     restart: always
     build: .
-    command: pipenv run python manage.py runserver 0.0.0.0:8000
+    env_file:
+      - .env
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
