DATA-1326 Update calls to env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     restart: always
     build: .
     env_file:
-      - .env
+      - .env.dev
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
