DATA-1326 Add production web server dependency

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 psycopg2-binary = "*"
 python3-saml = "*"
 redgreenunittest = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
