--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: postgres:11
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env.dev
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -17,6 +19,8 @@ services:
     build: .
     env_file:
       - .env.dev
+    environment:
+      - DEBUG=1
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
