--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,16 +3,32 @@ upstream galaxy {
 }
 
 server {
-
     listen 80;
-
+    server_name dev.kippgalaxy.org;
     location / {
-        proxy_pass http://galaxy;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+        return 301 https://$host$request_uri;
+    }  
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+server {
+    listen 443 ssl;
+    server_name dev.kippgalaxy.org;
+    ssl_certificate /etc/letsencrypt/live/dev.kippgalaxy.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/dev.kippgalaxy.org/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    
+    location / {
+        proxy_pass http://dev.kippgalaxy.org;
     }
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    
     location /staticfiles/ {
         alias /code/staticfiles/;
     }
@@ -20,6 +36,5 @@ server {
     location /static/ {
         alias /code/static/;
     }
-
 }
 
