--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,8 +6,10 @@ server {
     listen 80;
     server_name dev.kippgalaxy.org;
     location / {
-        return 301 https://$host$request_uri;
-    }  
+        if ($http_x_forwarded_proto = “http”) {
+            return 301 https://$server_name$request_uri;
+        }
+    }
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
