DATA-1440 Adjust ssl settings to resolve 404

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,26 @@
-upstream galaxy {
+upstream dev.galaxy.org {
     server web:8000;
 }
 
 server {
     listen 80;
     server_name dev.kippgalaxy.org;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    
     location / {
         if ($http_x_forwarded_proto = “http”) {
             return 301 https://$server_name$request_uri;
         }
     }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
 }
 server {
     listen 443 ssl;
     server_name dev.kippgalaxy.org;
+    server_tokens off;
+
     ssl_certificate /etc/letsencrypt/live/dev.kippgalaxy.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/dev.kippgalaxy.org/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -26,9 +29,8 @@ server {
     location / {
         proxy_pass http://dev.kippgalaxy.org;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
         proxy_set_header Host $http_host;
-        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /.well-known/acme-challenge/ {
