--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,9 +28,11 @@ server {
     
     location / {
         proxy_pass http://dev.kippgalaxy.org;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header 
     }
 
     location /.well-known/acme-challenge/ {
