--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
     
     location / {
         if ($http_x_forwarded_proto = “http”) {
-            return 301 https://$server_name$request_uri;
+            return 301 https://$host$request_uri;
         }
     }
 }
