--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,10 +17,10 @@ server {
     }
 }
 server {
-    listen 443 ssl;
+    listen 443;
     server_name dev.kippgalaxy.org;
-    server_tokens off;
 
+    ssl on;
     ssl_certificate /etc/letsencrypt/live/dev.kippgalaxy.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/dev.kippgalaxy.org/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -32,6 +32,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Host $server_name;
         proxy_redirect off;
     }
     
