DATA-995 Add date utils dependency

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ psycopg2-binary = "*"
 python3-saml = "*"
 redgreenunittest = "*"
 gunicorn = "*"
+python-dateutil = "*"
 
 [requires]
 python_version = "3.7"
