DATA-1012 Add Django Rest Framework

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ python3-saml = "*"
 redgreenunittest = "*"
 gunicorn = "*"
 python-dateutil = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
