--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
     build: .
     env_file:
       - .env.prod
-    command: gunicorn data_portal.wsgi:application --bind 0.0.0.0:8000 --workers=5
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers=5
     volumes:
       - .:/code
       - static_volume:/code/staticfiles
