DATA-1440 Update ignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -104,10 +104,13 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+# allow
+!data/nginx/app.conf
+
 # project specific
 settings.json
 certs/
 saml/
 *.swp
-data/
-!data/nginx/app.conf
+data/**/*
+
