--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -27,9 +27,17 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://example.org;
+        proxy_pass  http://dev.kippgalaxy.org;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+
+    location /staticfiles/ {
+        alias /code/staticfiles/;
+    }
+
+    location /static/ {
+        alias /code/static/;
     }
 }
