--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -5,32 +5,35 @@ upstream galaxy {
 server {
     listen 80;
     server_name dev.kippgalaxy.org;
-    server_tokens off;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://dev.kippgalaxy.org$request_uri;
 }
 
 server {
-    listen 443 ssl;
+    listen 443 default ssl;
     server_name dev.kippgalaxy.org;
-    server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/dev.kippgalaxy.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/dev.kippgalaxy.org/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
-        proxy_pass  http://dev.kippgalaxy.org;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+      # checks for static file, if not found proxy to app
+      try_files $uri @proxy_to_app;
+    }
+
+    location @proxy_to_app {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $http_host;
+      # we don't want nginx trying to do something clever with
+      # redirects, we set the Host: header above already.
+      proxy_redirect off;
+      proxy_pass http://galaxy;
     }
 
     location /staticfiles/ {
