DATA-1440 Add hostname from env var

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,6 +16,7 @@ services:
       - 8000
   nginx:
     image: nginx:1.15-alpine
+    hostname: ${DOMAIN}
     ports:
       - 80:80
       - 443:443
