--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -4,16 +4,16 @@ upstream galaxy {
 
 server {
     listen 80;
-    server_name dev.kippgalaxy.org;
-    return 301 https://dev.kippgalaxy.org$request_uri;
+    server_name $hostname;
+    return 301 https://$hostname$request_uri;
 }
 
 server {
     listen 443 default ssl;
-    server_name dev.kippgalaxy.org;
+    server_name $hostname;
 
-    ssl_certificate /etc/letsencrypt/live/dev.kippgalaxy.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/dev.kippgalaxy.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/$hostname/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$hostname/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
