--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ gunicorn = "*"
 python-dateutil = "*"
 djangorestframework = "*"
 requests = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.7"
