Update branch for github actions deployment

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,7 +2,7 @@ name: Dokku Deploy to production
 on:
   push:
     branches: 
-      - master
+      - main
 jobs:
   build:
     runs-on: [ubuntu-latest]
